<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.activities.LoginActivity"
    android:background="@color/colorPrimary">
    <EditText
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_100"
        android:padding="@dimen/dp_16"
        android:id="@+id/etUserNamelogin"
        android:layout_marginRight="@dimen/dp_16"
        android:hint="@string/userName"
        android:fontFamily="cursive"
        android:background="@drawable/edit_text_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:textColor="@color/colorPrimary"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:padding="@dimen/dp_16"
        android:id="@+id/etPasswordlogin"
        android:layout_marginRight="@dimen/dp_16"
        android:hint="@string/password"
        android:fontFamily="cursive"
        android:background="@drawable/edit_text_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserNamelogin"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:fontFamily="cursive"
        android:hint="@string/clickHere"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordlogin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_marginLeft="@dimen/dp_100"
        android:text="@string/newUser"
        android:textColor="@color/whiteColor"
        android:layout_marginTop="@dimen/dp_8"
        android:id="@+id/tvNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox"/>

    <TextView
        android:layout_marginLeft="@dimen/dp_8"
        android:textSize="@dimen/sp_24"
        android:fontFamily="cursive"
        android:text="@string/signUp"
        android:textColor="@color/whiteColor"
        android:layout_marginTop="@dimen/dp_8"
        android:id="@+id/tvsignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/tvNewUser"
        app:layout_constraintTop_toBottomOf="@id/checkBox"/>
    <Button
        android:textColor="@android:color/black"
        android:textAllCaps="false"
        android:text="@string/login"
        android:layout_margin="@dimen/dp_50"
        android:background="@drawable/edit_text_bg"
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNewUser"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>