<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.activities.SignUpActivity"
    android:background="@color/colorPrimary">
    <TextView
        android:layout_marginTop="@dimen/dp_16"
        android:fontFamily="cursive"
        android:text="@string/Register"
        android:textStyle="bold"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/sp_32"
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf=""/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:scaleType="fitXY"
        android:src="@drawable/ic_profilewhite"
        android:layout_marginTop="@dimen/dp_16"
        android:id="@+id/ivProfile"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup"/>
    <EditText
        android:textColor="@android:color/black"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:padding="@dimen/dp_16"
        android:id="@+id/etUserName"
        android:layout_marginRight="@dimen/dp_16"
        android:hint="@string/userName"
        android:fontFamily="cursive"
        android:background="@drawable/edit_text_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfile"/>
    <EditText
        android:textColor="@android:color/black"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:padding="@dimen/dp_16"
        android:id="@+id/etPassword"
        android:layout_marginRight="@dimen/dp_16"
        android:hint="@string/password"
        android:fontFamily="cursive"
        android:background="@drawable/edit_text_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserName"/>
    <EditText
        android:textColor="@android:color/black"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:padding="@dimen/dp_16"
        android:id="@+id/etEmail"
        android:layout_marginRight="@dimen/dp_16"
        android:hint="@string/email"
        android:fontFamily="cursive"
        android:background="@drawable/edit_text_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"/>
    <EditText
        android:textColor="@android:color/black"
        android:inputType="number"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:padding="@dimen/dp_16"
        android:id="@+id/etPhoneNumber"
        android:layout_marginRight="@dimen/dp_16"
        android:hint="@string/phoneNumber"
        android:fontFamily="cursive"
        android:background="@drawable/edit_text_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"/>
    <EditText
        android:textColor="@android:color/black"
        android:inputType="number"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:padding="@dimen/dp_16"
        android:id="@+id/etGender"
        android:layout_marginRight="@dimen/dp_16"
        android:hint="@string/gender"
        android:fontFamily="cursive"
        android:background="@drawable/edit_text_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPhoneNumber"/>
    <Button
        android:textColor="@android:color/black"
        android:textAllCaps="false"
        android:text="@string/signUp"
        android:layout_margin="@dimen/dp_50"
        android:background="@drawable/edit_text_bg"
        android:id="@+id/btnsignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etGender"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>