<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.activities.ProfileActivity"
    android:background="@color/colorPrimary">
    <TextView
        android:layout_marginTop="@dimen/dp_16"
        android:fontFamily="cursive"
        android:text="@string/myProfile"
        android:textStyle="bold"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/sp_32"
        android:id="@+id/tvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf=""/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:scaleType="fitXY"
        android:src="@drawable/ic_profilewhite"
        android:layout_marginTop="@dimen/dp_16"
        android:id="@+id/ivProfilepic"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_150"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProfile"/>
    <LinearLayout
        android:padding="@dimen/dp_10"
        android:background="@drawable/edit_text_bg"
        android:layout_margin="@dimen/dp_16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfilepic"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_margin="@dimen/dp_8"
            android:fontFamily="cursive"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_24"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="@dimen/sp_24"
            android:fontFamily="cursive"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:id="@+id/tvMyname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="@dimen/dp_8"
                android:fontFamily="cursive"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_24"
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="@dimen/sp_24"
                android:fontFamily="cursive"
                android:textColor="@android:color/black"
                android:layout_marginLeft="@dimen/dp_80"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                android:id="@+id/tvMyemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="@dimen/dp_8"
                android:fontFamily="cursive"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_24"
                android:text="@string/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="@dimen/sp_24"
                android:fontFamily="cursive"
                android:textColor="@android:color/black"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                android:id="@+id/tvMyphoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="@dimen/dp_8"
                android:fontFamily="cursive"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_24"
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="@dimen/sp_24"
                android:fontFamily="cursive"
                android:textColor="@android:color/black"
                android:layout_marginLeft="@dimen/dp_80"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                android:id="@+id/tvMygender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>